--- a/json/config.json
+++ b/json/config.json
@@ -2,6 +2,6 @@
   "refresh_time_down": "1",
   "refresh_time_up": 2,
   "serverchan": "",
-  "student_id": "2020314202",
+  "student_id": "",
   "repeatTimes": "5"
 }
